--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-
 <div class="flex flex-col justify-center items-center h-full
   {{activeTheme.bg}}">
   <div
     class="flex flex-col items-center justify-center">
     <h1 class="my-6 {{activeTheme.title}} text-center font-bold text-4xl
       h-full">
-      KAKURO 5x5
+      KAKURO
     </h1>
   </div>
 
@@ -13,11 +12,13 @@
     <button
       (click)="chooseTheme(0)"
       class="px-10 py-2 text-2xl rounded-lg {{activeTheme.btn_bg}} text-white
-      border-2 mr-10">pink</button>
+      border-2 mr-10">pink
+    </button>
     <button
       (click)="chooseTheme(1)"
       class="px-10 py-2 text-2xl rounded-lg {{activeTheme.btn_bg}} text-white
-      border-2">purple</button>
+      border-2">purple
+    </button>
   </div>
 
   <div class="flex justify-center items-center mb-20 {{activeTheme.table_bg}}
@@ -27,19 +28,32 @@
       <div *ngFor="let row of board; let i= index" class="flex flex-row
         space-x-1">
         <div *ngFor="let element of row; let j=index"
-          class="{{activeTheme.field_bg}} w-8 h-8 sm:w-20 sm:h-20 border
+             class="{{activeTheme.field_bg}} w-8 h-8 sm:w-20 sm:h-20
           overflow-hidden text-black flex justify-center items-center rounded">
           <input
-           type="number"
+            *ngIf="element.value === 0"
+            type="number"
             min="1"
             max="9"
-            id={{i}}{{j}} 
-            [value]="board[i][j]"
+            id={{i}}{{j}}
+            [value]=""
             (ngModelChange)="dataChanged($event, i,j)"
             class="w-full h-full text-center flex justify-center items-center
             text-3xl sm:text-5xl {{activeTheme.text}} pb-2.5">
+          <div *ngIf="element.value === -1" class="w-full h-full flex justify-center items-center {{activeTheme.board_01}}"></div>
+          <div *ngIf="element.value !== -1 && element.value !== 0"
+               class="w-full h-full flex justify-center items-center {{activeTheme.board_02}} text-white relative overflow-hidden">
+           <div class="w-28 h-0.5 absolute top-10 rotate-45 {{activeTheme.line}}"></div>
+           <div *ngIf="element.up" class="absolute top-3 right-3 font-bold {{activeTheme.numbers}}">{{ element.value }}</div>
+            <div *ngIf="!element.up" class="absolute bottom-2 left-4 font-bold {{activeTheme.numbers}}">{{ element.value }}</div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="flex justify-center items-center">
+    <button (click)="newGame()" class="bg-white text-black rounded-md font-bold hover:bg-gray-300 px-10 py-4">New Game</button>
+  </div>
+
 </div>
